johnd0e 2023-03-27 23:40:00+02:00 - build 774

1. LuaFAR: protect from crash in DialogInit
   (patch from shmuel).

zg 2023-03-12 23:26:44+02:00 - build 773

1. Shmuel: fix for vanilla lua 5.1.

johnd0e 2023-03-07 15:59:00+01:00 - build 772

1. LuaFAR: update luautf8 library to 0.1.5

   New functions:
   - utf8.isvalid(s) -> boolean
   - utf8.clean(s[, replacement_string]) -> cleaned_string, was_valid
   - utf8.invalidoffset(s[, init]) -> offset

   See https://github.com/starwing/luautf8 for more info.

   Note:
     utf8.utf8valid is rather obsolete now.

zg 2023-02-22 02:04:22+02:00 - build 771

1. experimental "FolderChanged" event.

drkns 2022-10-13 20:13:45+01:00 - build 770

1. Fix opening a module in the editor from the error message box (from Shmuel).

drkns 2022-09-25 21:35:49+01:00 - build 769

1. LuaFAR: GetSystemTime (from Shmuel).

drkns 2021-12-21 17:10:10+00:00 - build 768

1. Error in win.MoveFile.

johnd0e 2021-12-13 16:00:00+02:00 - build 767

1. More introspection with new function mf.EnumScript.

2. MacroBrowser is now able to list such entities as well:
   - Items of Plugins menu
   - Prefixes
   - Panel modules
   - Content columns
   - Custom sort modes

drkns 2021-12-04 22:32:15+00:00 - build 766

1. Preserve console mode in win.system().

johnd0e 2021-09-06 12:00:00+02:00 - build 765

1. Remove unnecessary metatables access restrictions when creating global
   MacroAPI tables (Area, Editor, etc.)
   (patch from shmuel).

johnd0e 2021-07-20 12:00:00+02:00 - build 764

1. LuaFAR: DM_GETDLGDATA / DM_SETDLGDATA are "no-ops" now: ignore parameters and return nil.
   (patch from shmuel).

johnd0e 2021-04-30 12:17:00+02:00 - build 763

1. LuaFAR: fix file:seek() for files larger than 2 GB
   (patch from shmuel).

johnd0e 2021-04-10 19:37:46+03:00 - build 762

1. LuaFAR: minor fix (from shmuel):
   panel.GetPanelInfo \ PluginHandle is light userdata now
   and doesn't require rawhandle() method.

johnd0e 2021-01-15 10:12:00+02:00 - build 761
