@@ -438,6 +438,14 @@ static int win_GetSystemTime(lua_State *L)
 	return 1;
 }
 
+static int win_GetLocalTime(lua_State *L)
+{
+	SYSTEMTIME st;
+	GetLocalTime(&st);
+	pushSystemTime(L, &st);
+	return 1;
+}
+
 static int win_GetSystemTimeAsFileTime(lua_State *L)
 {
 	FILETIME ft;
@@ -951,6 +959,7 @@ const luaL_Reg win_funcs[] =
 	{"GetFileTimes",        win_GetFileTimes},
 	{"GetRegKey",           win_GetRegKey},
 	{"GetSystemTime",       win_GetSystemTime},
+	{"GetLocalTime",        win_GetLocalTime},
 	{"GetSystemTimeAsFileTime", win_GetSystemTimeAsFileTime},
 	{"GetVirtualKeys",      win_GetVirtualKeys},
 	{"IsProcess64bit",      win_IsProcess64bit},
