@@ -1,3 +1,7 @@
+shmuel 2023-03-30 22:07:32+03:00 - build 775
+
+1. LuaFAR: add function win.GetLocalTime
+
 johnd0e 2023-03-27 23:40:00+02:00 - build 774
 
 1. LuaFAR: protect from crash in DialogInit
